# opensea-common

./: .clang-format  .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  LICENSE.md  README.md  cmake.bat  meson.build  meson_options.txt  opensea-common-doxygen-generator  sources.mk  update-version.sh
.github/workflows/: meson.yml
Make/: CMakeLists.txt
Make/UEFI/: copy_files.sh  opensea-common.dec  opensea-common.dsc  opensea-common.inf
Make/VS.2013/opensea-common/opensea-common/: opensea-common.vcxproj
Make/VS.2015/opensea-common/opensea-common/: opensea-common.vcxproj  opensea-common.vcxproj.filters
Make/VS.2017/opensea-common/opensea-common/: opensea-common.vcxproj  opensea-common.vcxproj.filters
Make/VS.2019/opensea-common/opensea-common/: opensea-common.vcxproj  opensea-common.vcxproj.filters
Make/VS.2022/opensea-common/: opensea-common.sln
Make/VS.2022/opensea-common/opensea-common/: opensea-common.vcxproj  opensea-common.vcxproj.filters  opensea-common.vpj
Make/gcc/: Makefile
Make/gccWin/: Makefile.gccWin
Make/prj/: opensea-common.vpj  opensea-common.vpw
Make/vmware/: Makefile
Test/: Meson.build  main.c  meson.build  secure_input_main.c  testConstants.h
Test/framework/: test_framework.c  test_framework.h
Test/unit/: bit_manip_test.c  io_utils_test.c  math_utils_test.c  memory_safety_test.c  pattern_utils_test.c  precision_timer_and_sleep_test.c  precision_timer_test.c  precision_timre_test.c  secure_file_test.c  sort_and_search_test.c  string_utils_test.c  test_secure_input.exp  test_secure_inputs.c  type_conversion_test.c  unit_conversion_test.c
include/: bit_manip.h  code_attributes.h  common.h  common_nix.h  common_platform.h  common_types.h  common_uefi.h  common_windows.h  constraint_handling.h  cpp.hint  env_detect.h  error_translation.h  impl_io_utils.h  impl_memory_safety.h  impl_sort_and_search.h  impl_string_utils.h  impl_time_utils.h  io_utils.h  math_utils.h  memory_safety.h  opensea_common_version.h  pattern_utils.h  precision_timer.h  predef_env_detect.h  prng.h  secure_file.h  secured_env_vars.h  sleep.h  sort_and_search.h  string_utils.h  time_utils.h  type_conversion.h  unit_conversion.h  version_sort.h  warning_ctl.h  windows_version_detect.h
src/: bit_manip.c  common.c  common_nix.c  common_platform.c  common_uefi.c  common_windows.c  constraint_handling.c  env_detect.c  error_translation.c  io_utils.c  math_utils.c  memory_safety.c  pattern_utils.c  posix_env_detect.c  posix_secure_file.c  precision_timer.c  prng.c  safe_bsearch.c  safe_lsearch.c  safe_qsort.c  safe_strtok.c  secure_file.c  secured_env_vars.c  sleep.c  sort_and_search.c  string_utils.c  time_utils.c  type_conversion.c  uefi_env_detect.c  unit_conversion.c  validate_format.c  version_sort.c  windows_env_detect.c  windows_secure_file.c  windows_version_detect.c
