cmake_minimum_required(VERSION "3.12")

if (MSVC)
    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
	    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/x64/LIB/${CMAKE_BUILD_TYPE}")
	    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/x64/LIB/${CMAKE_BUILD_TYPE}")
	    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/x64/LIB/${CMAKE_BUILD_TYPE}")
    elseif (CMAKE_SIZEOF_VOID_P EQUAL 4)
	    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/Win32/LIB/${CMAKE_BUILD_TYPE}")
	    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/Win32/LIB/${CMAKE_BUILD_TYPE}")
	    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/VS.2017/opensea-common/Win32/LIB/${CMAKE_BUILD_TYPE}")
    endif()

    add_definitions(-D WIN_API_TARGET_VERSION="100162990L")
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
endif()

if (UNIX)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/gcc/LIB")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/gcc/LIB")
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/gcc/LIB")	

    set(CMAKE_C_FLAGS "-Wall -fPIC -c -I. -std=gnu99 ${CMAKE_C_FLAGS}")
endif()

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /ZI /JMC /Wall /wd4214 /wd4201 /wd4668 /wd4820 /wd4710 /wd4255 /wd5045 /wd4711 /wd4324 /wd4221 /wd4204 /sdl /diagnostics:caret")

add_library("${PROJECT_NAME}" STATIC ${SOURCES} ${EXTRA_SRC})

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../include")


